manifests/overlays/production/backstage-patch.yaml
# Archivo: manifests/overlays/production/backstage-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage
  namespace: backstage
spec:
  template:
    spec:
      containers:
      - name: backstage
        resources:
          requests:
            memory: "2Gi"
            cpu: "1000m"
          limits:
            memory: "3Gi"
            cpu: "3000m"
