manifests/overlays/production/ingress.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress
  labels:
    name: ingress
    argocd.argoproj.io/managed-by: argocd
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-backstage
  namespace: ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:851725646489:certificate/b08eb77c-4d90-4a99-8e57-5a812f8f08a5
    
    
spec:  
  rules:
  - host: apps.pocarqnube.com
    http:
      paths:
      - path: /backstage
        pathType: Prefix
        backend:
          service:
            name: backstage
            port:
              number: 80
            namespace: backstage
