manifests/overlays/production/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: single-gitops-vs
  namespace: istio-system  # Movido aquí; quita el ns 'ingress' si no lo usas
spec:
  hosts:
  - "apps.pocarqnube.com"
  gateways:
  - istio-system/gitops-gateway
  http:
  - match:
    - uri:
        prefix: /argocd/
    rewrite:
      uri: /
    route:
    - destination:
        host: argocd-server.argocd.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /backstage/
    rewrite:
      uri: /
    route:
    - destination:
        host: backstage.backstage.svc.cluster.local
        port:
          number: 7007
